Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115043

Minor source compatibility break in QLoggingCategory

XMLWordPrintable

    • All
    • ef9fe7a99 (dev), 2e70ca484 (6.6), 757f64bd1 (6.5)

      A change made to QLoggingCategory between Qt 6.2.3 and Qt 6.5.1 caused code that used the API as seen below, to no longer compile.

      QLoggingCategory logging functions, like qCDebug, qCInfo, qCWarning, allowed passing a function returning a reference to a declared category as argument:

      Q_LOGGING_CATEGORY(category, "mycat", QtInfoMsg)
      ...
      QLoggingCategory &cat() { return category; }
      ...
      qCInfo(cat) << "Info";
      

        For Gerrit Dashboard: QTBUG-115043
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            andrhans Andreas Aardal Hanssen
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes