qC{Debug,Info,Warning,Critical}: move the function call to the macro

The change in commit 04ee5795cc31ee81fb0c27bf55d9e8f662995753 was
source-incompatible if the function in question was a non-static member.
I could add a new, template constructor to catch those, but this is
simpler.

Fixes: QTBUG-115043
Change-Id: I53335f845a1345299031fffd176f1071afbae7a9
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ef9fe7a99a9a6779e7133167fe84426bfe9cc371)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>